depl-with-secren-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl-with-secren-env
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: nginx
          image: nginx
