depl-with-secren-vol.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl-with-secren-vol
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: nginx
          image: nginx
          volumeMounts:
            - mountPath: "/etc/secrets"
              name: secret-volume
              readOnly: true
      volumes:
        - name: secret-volume
          secret:
            secretName: user-password-secret
