emptyDir.yaml
apiVersion: v1
kind: Pod
metadata:
  name: two-containers
spec:
  restartPolicy: Never
  containers:
    - name: nginx-container
      image: nginx
      volumeMounts:
 # указываем какой именно том монтируем
      - name: shared-data
 # куда именно внутрь контейнера монтируем
        mountPath: /usr/share/nginx/html
        readOnly: true
    - name: ubuntu-container
      image: ubuntu
      volumeMounts:
      - name: shared-data
# монтируем по другому пути чем в первом контейнере
        mountPath: /pod-data
# создаем тестовую страницу, чтобы убедиться что она будет доступна с первого контейнера
      command: ["/bin/sh"]
      args: ["-c", "while true; do echo Hello from the debian container date: $(date)> /pod-data/index.html; sleep 1; done"]
  volumes:
  - name: shared-data
    emptyDir:
 # по факту будем хранить в RAM
       medium: Memory
