studyconfigMapEnv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl-configmap-env
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: nginx
          image: nginx
# Указываем созданный ранее configMap
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
