service-NodePort.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "service-node-port"
spec:
  type: NodePort
  ports:
    - protocol: TCP
# Порт на который сервис будет перенаправлять трафик с порта указанного в nodePort
      port: 80
# Порт внутри контейнера
      targetPort: 8000
# Опционален, если его не указать – Kubernetes выделит порт из диапазона 30000-32767
      nodePort: 30001
# Указываем на какие поды нужно рапределять трафик
  selector:
    app: "my-app"
