ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  defaultBackend:
    service:
      name: service-np
      port:
        number: 80
# описываем правила маршрутизации
  rules:
   - host: app.example.com
     http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
# мы можем указать сервис с приложением актуальной версии
                name: service-np
                port: 
                  number: 80
          - pathType: Prefix
            path: /v1
            backend:
              service:
# мы можем указать сервис с приложением первой версии
                name: service-np
                port: 
                  number: 80
          - pathType: Exact
            path: /v2
            backend:
              service:
# мы можем указать сервис с приложением второй версии
                name: service-np
                port: 
                  number: 80
